--- a/pom.xml
+++ b/pom.xml
@@ -50,6 +50,11 @@
 			<version>3.8.0</version>
 		</dependency>
 
+		<dependency>
+			<groupId>net.sf.ucanaccess</groupId>
+			<artifactId>ucanaccess</artifactId>
+			<version>5.0.1</version>
+		</dependency>
 
 	</dependencies>
 
