--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,17 @@
 spring.main.web-application-type=none
 spring.application.ui.title=Tournament - Planer
 
-#Document storage properties
-document.upload-directory=doc-uploads
+# Database
+database.username=
+database.password=
 
-## Josh
-ftp1.username=user
-ftp1.password=123
-ftp1.port=21
-ftp1.host=localhost
+# FTP
+ftp.username=user
+ftp.password=123
+ftp.port=21
+ftp.host=localhost
+
+# !Dev
+#ftp.username=gruempelidev
+#ftp.password=I2526u!ktRnx97h5#3rD1$5x5p7~Ld49a06l
+#ftp.host=fcappenzell.ch
